# loominglearn

./: LoominglearnSettings.py  README.md  pyproject.toml
data/: data.py
labs/: 01_data_exploration.ipynb
